Aula 3 codigo, nao pegou