@@ -20,7 +20,7 @@ public class Monte {
     }
 
     public Carta virar() {
-        return cartas.removeFirst();
+        return cartas.remove(0);
     }
 
 }
